Closed Bug 36367 Opened 24 years ago Closed 24 years ago

Selecting option in dropdown causes reflow, horks table layout

Categories

(Core :: Layout: Tables, defect, P1)

defect

Tracking

()

VERIFIED FIXED

People

(Reporter: jwbaker, Assigned: buster)

References

()

Details

(Keywords: regression, testcase, top100, Whiteboard: [nsbeta2+])

Attachments

(3 files)

i686-pc-linux-gnu Build 2000041908 (M16).  Changing the selection in a <SELECT>
widget causes the page to reflow, and screws up the table layout.  To reproduce:

1: Start Mozilla.
2: Load http://quote.yahoo.com/
3: Click on the select widget at the right of the text input
4: Choose "detailed"
5: Observe

After you complete these steps, the main body of the page is shifted right by at
least 100 pixels on my display.  The expected result is that the layout of the
page does not change.  Screenshot is attached.
Looks to be a table incremental reflow problem
Assignee: troy → karnaze
Component: Layout → HTMLTables
QA Contact: petersen → chrisd
Happens on Windows 98, build 2000 041908 as well.
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Linux → All
Hardware: PC → All
Whiteboard: davidr8@home.com simplifying
If you replace the text right before the <select> in the test case with this:
  <input type="text" size="50">&nbsp;

then you get the same effect.  If you remove the &nbsp;, however, the page 
reverts to the original layout when you re-select option 1.
Keywords: testcase
Whiteboard: davidr8@home.com simplifying
Adding incremental reflow keywords.
Status: NEW → ASSIGNED
Target Milestone: --- → M16
Rod, the table is getting bigger because it is center aligned and the block 
containing it is telling it that it has too much available width. The block is 
doing this because the list frame is reporting a large desired size during the 
reflows that happen when items get selected. Note that I had marked this as M16.
Assignee: karnaze → rods
Status: ASSIGNED → NEW
Buster, it looks like I was wrong about the list frame returning too large a 
desired width. However, the block is reflowing the table with too large an 
available width and the outer table takes it all since the inner table is center 
aligned.

  TO::Rfl ex 01140494 des=(8940,435)
  TO::Rfl en 01140494 rea=2 av=(13200,UC) comp=(0,0) count=129
     T::Rfl en 011404E8 rea=2 av=(13200,UC) comp=(7890,UC) count=130
       TRG::Rfl 01140554 rea=2 av=(7890,UC) comp=(7890,UC) count=131
         TR::Rfl en 01140594 rea=2 av=(7890,UC) comp=(7890,UC) count=132
           TC::Rfl 011405DC rea=2 av=(7830,UC) comp=(7770,UC) count=133
             Area::Rfl en 01140638 rea=2 av=(7770,UC) comp=(7770,UC) count=134
             Area::Rfl ex 01140638 des=(7770,285)
          TC::Rfl ex 011405DC des=(7830,345)
        TR::Rfl ex 01140594 des=(7860,345)
      TRG::Rfl ex 01140554 des=(7890,345)
    T::Rfl ex 011404E8 des=(7920,435)
  TO::Rfl ex 01140494 des=(13200,435)
Assignee: rods → buster
Status: NEW → ASSIGNED
Whiteboard: fix in hand
fixed incremental calculation of preferred size in nsBlockFrame and 
nsBlockReflowContext
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
This regressed in at least Linux Build 2000052109.  I will backpedal and see if
I can pinpoint where the problem resurfaced.
Status: RESOLVED → REOPENED
Keywords: regression, top100
Resolution: FIXED → ---
Went all the way back to the 13 May builds, and I couldn't find a build that
started on Linux without crashing and didn't have this bug.  Did the fix
actually get committed?
I see the problem.  This is only a problem when GFX scrollbars are turned on, 
and I had them turned off in my tree.  So, yes, this is still a bug.
Status: REOPENED → ASSIGNED
Priority: P3 → P1
changed summary
Summary: Changing selection causes reflow, horks table layout → Selecting option in combobox causes reflow, horks table layout
changing summary
Summary: Selecting option in combobox causes reflow, horks table layout → Selecting option in dropdown causes reflow, horks table layout
nominating for nsbeta2 because this occurs on a fair number of common sites.
I've sent a proposed fix to rod for review.
Keywords: nsbeta2
Rick: can you get PDT approval for checkin?  rod has reviewed already, top100 
looks good.
Granting PDT approval on basis of: fix in hand, code review complete, top 100 
passed. Good work Steve.
Whiteboard: fix in hand → [nsbeta2+] fix in hand
fixed, r=rods.  we now pass in a meaningful width for incremental reflows 
targeted at mDisplayFrame
Status: ASSIGNED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
Whiteboard: [nsbeta2+] fix in hand → [nsbeta2+]
Confirmed on Linux Build 2000060508.  Symptoms of bug are no longer in present. 
WTG.
regressed: bug 40559
Actually, Bug 40559 was reported before the fix for this bug was in the build. 
This bug is still fixed, as far as I can tell, in the lastest M17 and M16 builds
for Linux.
*** Bug 40559 has been marked as a duplicate of this bug. ***
my bad, forgot to compare fix date for this bug with the date of the build i 
was using.
Marking VERIFIED FIXED on:
- MacOS9 2000-06-30-09-M17 Commercial
- Linux6 2000-06-30-08-M17 Commercial
- Win98  2000-06-30-09-M17 Commercial
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: