bug 36367 r=rods fix was to pass in the correct width during certain types of incremental reflows.